uda-infra.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  Ogbeide Osemenkhian / Udagram Project 2
  This configuration deploys a udagram Webservers in autocaling group, Attach a Load balancer 
  and configure the required security groups as well as connect the infratructure to the right VPC

Parameters:
    EnvironmentName:
      Description: This is the name prefixed with resource name
      Type: String

    WebserverImageAMI:
      Description: Amazon machine Image to use (ubuntu 18)
      Type: String
      Default: ami-0b152cfd354c4c7a4

    WebserverGroupMinSize:
      Description: Minimum number of ec2
      Type: String
      Default: 2

    WebserverGroupMaxSize:
      Description: Minimum number of ec2
      Type: String
      Default: 6

    WebserverGroupDesiredSize:
      Description: Required number of EC2 to deploy
      Type: String
      Default: 4

    KeyPairName:
      Description: Name of key pair used to enable ssh access
      Type: String

Resources:
  LBSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http traffic to our load balancer
      VpcId:
        Fn::ImportValue:
          !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our hosts and SSH 
      VpcId:
        Fn::ImportValue:
          !Sub "${EnvironmentName}-VPCID"
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0

  GtUdagramLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo apt-get update -y
          sudo apt-get install apache2 -y
          sudo systemctl start apache2.service
          cd /var/www/html
          echo "Udacity Demo Web Server Up and Running!" > index.html
      ImageId:
        Ref: WebserverImageAMI
      SecurityGroups:
      - Ref: WebServerSecGroup
      InstanceType: t3.medium
      BlockDeviceMappings:
      - DeviceName: "/dev/sdk"
        Ebs:
          Volumes: "10"

  WebAppGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
      - Fn::ImportValue: 
          !Sub "${EnvironmentName}-PRIV-NETS"
      LaunchConfigurationName:
        Ref: GtUdagramLaunchConfig
      DesiredCapacity:
        Ref: WebserverGroupDesiredSize
      MinSize:
        Ref: WebserverGroupMinSize
      MaxSize:
        Ref: WebserverGroupMaxSize
      TargetGroupARNs:
      - Ref: WebAppTargetGroup
  WebAppLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Subnets:
      - Fn::ImportValue:
          Fn::Sub: "${EnvironmentName}-PUB-SUB1"
      - Fn::ImportValue:
          Fn::Sub: "${EnvironmentName}-PUB-SUB2"
      SecurityGroups:
      - Ref: LBSecGroup
  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: WebAppTargetGroup
      LoadBalancerArn:
        Ref: WebAppLB
      Port: '80'
      Protocol: HTTP
  ALBListenerRule:
      Type: AWS::ElasticLoadBalancingV2::ListenerRule
      Properties:
        Actions:
        - Type: forward
          TargetGroupArn: !Ref 'WebAppTargetGroup'
        Conditions:
        - Field: path-pattern
          Values: [/]
        ListenerArn: !Ref 'Listener'
        Priority: 1
  WebAppTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 8
      HealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: 
        Fn::ImportValue:
          Fn::Sub: "${EnvironmentName}-VPCID"

  UdagramS3ReadOnlyAccess:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - arn:aws:iam:/policy/AmazonSSMManagedInstanceCore
  UdagramProfileROle:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref UdagramS3ReadOnlyAccess
      

Outputs:
  LoadBalancerDNSName:
    Description: DNS Name of the web application
    Value:
      Fn::Join:
        - ""
        - - "http://"
          - Fn::GetAtt: WebAppLB.DNSName
    Export:
      Name:
        Fn::Sub: "${EnvironmentName}-DNS-NAME"
